--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "2.32.0",
     "husky": "9.1.7",
     "lint-staged": "16.2.6",
+    "playwright": "^1.56.1",
     "sinon": "21.0.0",
     "stylelint": "16.25.0",
     "stylelint-config-standard": "39.0.1"
